; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_osm_ucast_lash.c_dequeue.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_osm_ucast_lash.c_dequeue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@Q_MEMBER = common dso_local global i64 0, align 8
@MST_MEMBER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__**)* @dequeue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dequeue(i32* %0, %struct.TYPE_3__** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__**, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__** %1, %struct.TYPE_3__*** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @cl_list_remove_head(i32* %5)
  %7 = inttoptr i64 %6 to %struct.TYPE_3__*
  %8 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %4, align 8
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %8, align 8
  %9 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %4, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @Q_MEMBER, align 8
  %14 = icmp eq i64 %12, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @CL_ASSERT(i32 %15)
  %17 = load i64, i64* @MST_MEMBER, align 8
  %18 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %4, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  store i64 %17, i64* %20, align 8
  ret void
}

declare dso_local i64 @cl_list_remove_head(i32*) #1

declare dso_local i32 @CL_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
